fixed sidebar icon excess spacing

--- a/src/stylesheets/shared.css
+++ b/src/stylesheets/shared.css
@@ -434,6 +434,8 @@ footer .right-reserved {
   background: #072e2e;
   border-radius: 4px;
   margin: 0 0.5rem;
+  position: absolute;
+  bottom: 3%;
 }
 .material-icons.logout {
   margin-left: -0.5rem;
@@ -444,11 +446,7 @@ footer .right-reserved {
 .expand-sidebar {
   margin-left: 250px;
 }
-.lower-sidebar {
-  display: flex;
-  flex-direction: column;
-  gap: 20rem;
-}
+
 .sidebar a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
